fixed for CHLK-4704 Teacher. Attendance. Y-axis on the graph is shifted to the right

--- a/Chalkable.Web/assets/sass2/3_molecules/_chart.sass
+++ b/Chalkable.Web/assets/sass2/3_molecules/_chart.sass
@@ -39,6 +39,11 @@
 .chart-container.with-y-title
   .highcharts-container::before
     left: 65px
+    margin-bottom: 12px
+
+  &.empty
+    .highcharts-container::before
+      margin-left: -25px
 
 .highcharts-container::before
   content: ' '
